# PRISM

./: .gitignore  CHANGELOG_SESSIONS.md  CLAUDE.md  PRODUCT_TODO.md  README.md  SAFELOOP_TECH_BILAN.md  VISION.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts
Divers/: FR-GPS-660-1_Retour_client.xlsx  FR-GPS-660-2_Retour_client.xlsx  FR-GPS-660-3_Retour_client.xlsx  FR-GPS-660_Comparaison_Client_vs_Master.xlsx  FR-GPS-660_Comparaison_JB_TAG.xlsx  TEST_JB_COMPARE.xlsx
backend/: .env.example  .gitignore  CLAUDE.md  README_V3_3.md  main.py  prism.spec  pyproject.toml  requirements.txt
backend/app/: schemas.py
backend/app/routes/: ai.py  engine.py
backend/app/services/: ai_service.py  component_library_service.py  knowledge_service.py  sil_report_service.py  sil_service.py
backend/core/: config.py
backend/core/api/: routes.py
backend/core/math/: pfd_calc.py
backend/core/models/: architectures.py
backend/knowledge/: README.md  components-guide.md  hazop-lopa.md  iec61511-part1.md  prism-guide.md  sil-methodology.md
backend/models/: __init__.py  request.py  response.py
backend/sil-py/: README.md
backend/sil-py/sil_engine/: lambda_db_v0.7.2.py
backend/solver/: __init__.py
backend/tests/: test_pfd_calc.py
front/: AUDIT_FRONT_2026-03-06.md  AUDIT_PRISM_FRONTEND.md  BETA.md  CHANGELOG_SESSION1.md  CLAUDE.md  README.md  Safety Manual.md  blueprint.md  index.html  info.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.calc-integration.json  tsconfig.engine.json  tsconfig.engine.smoke.json  (+3 more)
(+490 files in other folders)
